Project

General

Profile

Actions

Bug #18314

closed

commit 41d46e492 "osd/ReplicatedPG: limit omap request by bytes" breaks large directory

Added by Zheng Yan over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

OPTION

4M can only carry about 5k dentries. It's too small

Actions #1

Updated by Zheng Yan over 7 years ago

OPTION(osd_max_omap_bytes_per_request, OPT_U64, 4<<20)

4M can only encodes about 5k dentries. It's too small for directory

Actions #2

Updated by Zheng Yan over 7 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Sage Weil over 7 years ago

http://tracker.ceph.com/issues/18334 to track a proper fix for OMAP_GETKEYS

Actions #4

Updated by Sage Weil over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF