osd/PrimaryLogPG: enlarge omap request bytes limitation

For cephfs, 4M buffer can only encode about 5k dentries. It's too
small for directory.

Fixes: http://tracker.ceph.com/issues/18314
Signed-off-by: Yan, Zheng <zyan@redhat.com>